cabal-version: 3.0

name: robust-int
version: 1.1.1

synopsis: Robust integer parsers

description: Integer parsers for Parsec (on Text streams) and
  Attoparsec (on ByteString and Text streams), that fail instead of
  wrapping around.  I.e., if the input reads "298", then an attempt to
  parse a value of type `Word8` will report the error, rather than
  silently (and incorrectly) return the value 42.

category: Text, Parsing

license:             AGPL-3.0-or-later
license-file:        LICENSE
author:              Stefan Klinger <https://stefan-klinger.de/>
maintainer:          git@stefan-klinger.de
copyright:           © 2021 Stefan Klinger

package-url:         https://github.com/s5k6/robust-int

build-type:          Simple

extra-source-files: cabal.project, cabal.project.freeze, robust-int.cabal
                  , README.md



common shared
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , ScopedTypeVariables
                     , LambdaCase

common devel
  import:              shared

  ghc-options:         -Wall
                       -Wwarn=deprecations
                       -Wno-orphans
                       -Wno-unused-imports
                       -Wwarn=name-shadowing

common production
  import:              shared
  ghc-options:         -Wall
                       -Wwarn=missing-local-signatures
                       -Wwarn=missing-export-lists
                       -Wwarn=unused-top-binds
                       -Wwarn=deprecations
                       -Werror=unused-imports
                       -Wno-orphans
                       -Wwarn=name-shadowing

common chosen-properties
  import: production



library
  import:              chosen-properties
  hs-source-dirs:      src

  exposed-modules:     Data.RobustInt.Parsec, Data.RobustInt.Attoparsec

  build-depends:       base
                     , parsec
                     , attoparsec
                     , bytestring
                     , text


-- Testing --

common test
  import:              chosen-properties

  default-extensions:  TemplateHaskell

  hs-source-dirs:      test

  -- Does not work.  A bug?
  -- type:                exitcode-stdio-1.0



test-suite attoparsecByteString
  import:              test
  type:                exitcode-stdio-1.0

  main-is:             AttoparsecByteString.hs

  build-depends:       base
                     , robust-int
                     , QuickCheck
                     , random
                     , bytestring
                     , attoparsec

test-suite attoparsecText
  import:              test
  type:                exitcode-stdio-1.0

  main-is:             AttoparsecText.hs

  build-depends:       base
                     , robust-int
                     , QuickCheck
                     , random
                     , text
                     , attoparsec

test-suite parsecText
  import:              test
  type:                exitcode-stdio-1.0

  main-is:             ParsecText.hs

  build-depends:       base
                     , robust-int
                     , QuickCheck
                     , random
                     , text
                     , parsec


-- playing with robust integer parsing

executable demo
  import:              chosen-properties

  hs-source-dirs:      demo
  main-is:             Demo.hs

  build-depends:       base
                     , robust-int
                     , text
                     , attoparsec
                     , parsec
                     , parsec3-numbers
                     , megaparsec

executable performance
  import:              chosen-properties

  hs-source-dirs:      performance
  main-is:             Main.hs

  build-depends:       base
                     , robust-int
                     , text
                     , parsec
                     , criterion
